Enhance subtitle in index.html to emphasize MyCompanion's AI capabilities

--- a/index.html
+++ b/index.html
@@ -2159,7 +2159,7 @@
                 <div class="hero-content">
                     <h1>Votre famille mérite la tranquillité d'esprit</h1>
                     <p class="subtitle">
-                        MyCompanion appelle quotidiennement vos proches seniors pour prendre de leurs nouvelles
+                        MyCompanion : l'IA qui appelle quotidiennement vos proches seniors pour prendre de leurs nouvelles
                         et vous tient informé de leur bien-être. Une présence bienveillante et rassurante.
                     </p>
                     
