Add phone trial section to index.html and implement CORS solution in script.js for improved user experience

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                         <button class="btn-primary" onclick="showPage('register')">Créer mon compte gratuit</button>
                         <button class="btn-secondary" onclick="openLeadModal()">Voir la démo</button>
                     </div>
+
+                    <div class="hero-phone-trial">
+                        <div class="phone-input-group">
+                            <input type="tel" id="phone-trial" placeholder="Numéro de téléphone" class="phone-input" maxlength="15">
+                            <button class="btn-trial" onclick="tryMyCompanionCall()">Essayez un appel MyCompanion</button>
+                        </div>
+                        <p class="trial-note">Testez gratuitement</p>
+                    </div>
                 </div>
             </div>
         </section>
